--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.14.4",
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.15.2",
+    "multer": "^2.0.1"
   }
 }
